# opus-tryout

./: .gitmodules  CMakeLists.txt  README.md  audio_opus_pipeline.cpp  audio_opus_pipeline.h  audio_pipeline.cpp  audio_pipeline.h  buffered_device.cpp  buffered_device.h  encoder_device.cpp  encoder_device.h  main.cpp  pipe_device.cpp  pipe_device.h  sound_decoder.cpp  sound_decoder.h  sound_encoder.cpp  sound_encoder.h  sound_encoder_pipeline.cpp  sound_encoder_pipeline.h  transforming_device.cpp  transforming_device.h
